ADD private cluster option
